force-app/main/default/objects/Case_Label__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipName>Case_Labels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>