force-app/main/default/objects/Case_Label__c/fields/Communication_with_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Communication_with_Claimant__c</fullName>
    <inlineHelpText>What did they say to the claimant?</inlineHelpText>
    <label>Communication with Claimant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>