force-app/main/default/objects/Case_Label__c/fields/Company_Delivered_To__c.field-meta.xml
<CustomField>
    <fullName>Company_Delivered_To__c</fullName>
    <label>Company Delivered To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>