force-app/main/default/objects/Case_Label__c/fields/Directly_work_with_claimant__c.field-meta.xml
<CustomField>
    <fullName>Directly_work_with_claimant__c</fullName>
    <inlineHelpText>Did they speak directly with the claimant?</inlineHelpText>
    <label>Directly work with claimant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>