force-app/main/default/objects/Case_Label__c/fields/Estimated_worked_label__c.field-meta.xml
<CustomField>
    <fullName>Estimated_worked_label__c</fullName>
    <label>Estimated % worked label</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>