force-app/main/default/objects/Case_Label__c/fields/Factory_Time__c.field-meta.xml
<CustomField>
    <fullName>Factory_Time__c</fullName>
    <inlineHelpText>How often did this person come to the factory?</inlineHelpText>
    <label>Factory Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>