force-app/main/default/objects/Case_Label__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>