force-app/main/default/objects/Case_Label__c/fields/Know_where_completed_garments_delivered__c.field-meta.xml
<CustomField>
    <fullName>Know_where_completed_garments_delivered__c</fullName>
    <label>Know where completed garments delivered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>