force-app/main/default/objects/Case_Label__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <referenceTo>Labels__c</referenceTo>
    <relationshipName>Case_Labels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>