force-app/main/default/objects/Case_Label__c/fields/Mistake_Communication__c.field-meta.xml
<CustomField>
    <fullName>Mistake_Communication__c</fullName>
    <inlineHelpText>How was the mistake communicated with the claimant?</inlineHelpText>
    <label>Mistake Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>