force-app/main/default/objects/Case_Label__c/fields/Other_than_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Other_than_supervisor__c</fullName>
    <label>Someone other than supervisor inspect?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>