force-app/main/default/objects/Case_Label__c/fields/Sizes__c.field-meta.xml
<CustomField>
    <fullName>Sizes__c</fullName>
    <label>Sizes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Juniors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>