force-app/main/default/objects/Case_Label__c/fields/Work_Overtime_for_a_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Work_Overtime_for_a_Deadline__c</fullName>
    <inlineHelpText>Did the claimant work overtime to meet a deadline?</inlineHelpText>
    <label>Work Overtime for a Deadline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>