force-app/main/default/objects/Case_Label__c/fields/Work_Overtime_for_a_Mistake__c.field-meta.xml
<CustomField>
    <fullName>Work_Overtime_for_a_Mistake__c</fullName>
    <inlineHelpText>Did claimant work overtime to correct a mistake(s)?</inlineHelpText>
    <label>Work Overtime for a Mistake</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>