force-app/main/default/objects/Case_Label__c/validationRules/Inactive_Reason_Status_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Reason_Status_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 TEXT(Status__c) = &#39;Active&#39;,
 LEN( Inactive_Reason__c ) &gt; 0
)</errorConditionFormula>
    <errorMessage>If Status = Active, the Inactive Reason field must be blank.</errorMessage>
</ValidationRule>